# chorduroy

./: Cargo.toml
data/: Untitled-1.ipynb  maj_cov.json  maj_mean.json  maj_samples.json  min_cov.json  min_mean.json  min_samples.json
src/: chord_guesser.rs  main.rs  model.rs  utils.rs
web/: fresh.gen.ts  import_map.json
web/islands/: QChart.tsx
web/routes/: index.tsx
