[package]
name = "chorduroy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
coremidi = "0.7.0"
cpal = "0.15.1"
itertools = "0.10.5"
rand = "0.8.5"
textplots = "0.8.0"
websocket = "0.26.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
rustfft = "6.1.0"
nalgebra-mvn = "0.14.0"
nalgebra = "0.32.2"
strum = "0.24.1"
strum_macros = "0.24.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
ordered-float = "3.6.0"
aubio = { version = "0.2.1", features = ["bindgen"] }
lazy_static = "1.4.0"
